cmake_minimum_required(VERSION 2.6)

SET(
	NAME
	Robot
)

PROJECT( ${NAME} )

IF( WIN32 )
	SET( ROBOTINOAPI2_DIR "$ENV{ProgramFiles}/REC GmbH/robotino/api2")
ELSE( WIN32 )
	SET( ROBOTINOAPI2_DIR "/opt/robotino" )
ENDIF( WIN32 )

SET( CMAKE_MODULE_PATH ${ROBOTINOAPI2_DIR}/cmake )

find_package( RobotinoAPI2 REQUIRED )

COPY_ROBOTINOAPI2_DLLS( "${CMAKE_CURRENT_BINARY_DIR}" "${CMAKE_CURRENT_BINARY_DIR}" )

FILE( GLOB SRCS *.cpp )
FILE( GLOB HEADER *.h )
FILE( COPY pos.txt DESTINATION ./Debug )

ADD_EXECUTABLE(
	${NAME}
	${SRCS}
	${HEADER}
)

TARGET_LINK_LIBRARIES(
	${NAME}
	${REC_ROBOTINO_API2_LIBRARY}
)

SOURCE_GROUP( "Source Files" FILES ${SRCS} ${HEADER} )
